Remove tailwind's collapse class to prevent interfering with Bootstrap class

--- a/css/styles.css
+++ b/css/styles.css
@@ -4175,10 +4175,6 @@ summary:focus::-webkit-details-marker {
   visibility: hidden;
 }
 
-.collapse {
-  visibility: collapse;
-}
-
 .fixed {
   position: fixed;
 }
@@ -5613,12 +5609,6 @@ summary:focus::-webkit-details-marker {
   transition-duration: 300ms;
 }
 
-/* prevent the tailwind [collapse] class from clobbering the bootstrap class */
-
-.collapse {
-    visibility: inherit;
-}
-
 .before--\!hidden::before {
   content: var(--tw-content);
   display: none !important;
@@ -6260,4 +6250,5 @@ summary:focus::-webkit-details-marker {
     font-size: 1rem;
   }
 }
+
 /*# sourceMappingURL=styles.css.map */
